...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/main_layout_backgroundEvening"
        android:padding="15dp">

        <ImageButton
            android:id="@+id/ibMoveForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/ibMoveBack"
            android:contentDescription="@string/forward"
...
