...
    <string name="helperFirstDialogTitle">Smart helper :)</string>
    <string name="timeUntilAlarmBoom">Alarm will rang after : <xliff:g id="hoursUntilAlarmBoom">%1$d</xliff:g> h. <xliff:g id="minutesUntilAlarmBoom">%2$d</xliff:g> min.</string>
    <string name="blockedButtonMessage">Hi, this option is last one :(, please try moving other direction.</string>
    <string name="helperHideDialogTitle">Do you want to continue without helping messages?</string>
    <string name="alarmTimeLimitationMessage">Remember, you can set alarm only for next 23 hours and 59 minutes :)</string>
    <string name="contentDescription_playRingtone">Play ringtone</string>
    <string name="contentDescription_pauseRingtone">Pause ringtone</string>
    <string name="hint_for_tvSetAlarmMessage">Type some message for yourself here (it will appear on the alarm screen).</string>
    <string name="toast_message_was_saved">Message was successfully saved.</string>
    <string name="preview_dialog_boom_time">Boom time :</string>
    <string name="preview_dialog_ringtone">Ringtone :</string>
    <string name="preview_dialog_message">Message :</string>
    <string name="deepSleepOptionTitle">Deep sleep wake up</string>
...
